This commit represents a paradigm shift in the Docker implementation of KaBOB. Previously, the KaBOB code was made available to the AllegroGraph container, and the KaBOB build process was run on the AllegroGraph container. This setup mirrored the original implementation of KaBOB which runs on a single machine and ssh's to the agraph user in order to facilitate loading data into AG. The initial Docker implementation ran code from the AllegroGraph container to avoid the need to use different users and to ssh between containers. While convenient to a degree, this setup resulted in extra dependencies in the AllegroGraph container, e.g. Java, Maven, etc. as well as a violation of the "one container one process" mantra of Docker. The changes made in this commit comply with an update to the AllegroGraph container that now monitors a particular Docker volume and triggers a load based on the creation of a file in that volume. This change allows the KaBOB container to communicate with AllegroGraph without requiring ssh. It also allows all unnecessary dependencies to be removed from the AllegroGraph container. Communication between containers is done via a Docker network named agraph. This setup can easily be extended to use a different triple store vendor as long as the triple store container implements a similar volume monitoring procedure to trigger a load.